--- a/Views/Home/contato.cshtml
+++ b/Views/Home/contato.cshtml
@@ -1,4 +1,4 @@
-    <form class="form border p-5 bg-light"> 
+    <form class="form border p-5 bg-light" method="POST" asp-action="Contato"> 
         
      <h1>Envia-nos mensagem, que a gente respodne</h1>
   <div class="mb-3">
