--- a/Views/Home/contato.cshtml
+++ b/Views/Home/contato.cshtml
@@ -1,9 +1,9 @@
-    <form class="form border p-5 bg-light" method="POST" asp-action="Contato"> 
+    <form class="form border p-5 bg-light mt-5" method="POST" asp-action="Contato" id="contatoForm"> 
         
      <h1>Envia-nos mensagem, que a gente respodne</h1>
   <div class="mb-3">
-    <label for="nome" class="form-label">Nome</label>
-    <input type="text" class="form-control" id="email">
+    <label for="nome" class="form-label" id="nome">Nome</label>
+    <input type="text" class="form-control" id="nome">
   </div>
   <div class="mb-3">
     <label for="email" class="form-label">Email</label>
