--- a/Views/Home/index.cshtml
+++ b/Views/Home/index.cshtml
@@ -1,10 +1,9 @@
 
-        <h1>A melhor empresa de tecnologia da região</h1>
+        <h1 class="text-light">A melhor empresa de tecnologia da região</h1>
         <h1>Produtos de alta qualidade</h1>
-        <div>
-            <img id="imgprin" src="~/img/atendente.jpeg " alt="atendente" class="w-15">
-        </div>
-        <div>
-    
-        </div>    
+
+ <div class="card ">
+  <img src="~/img/atendente.jpeg" class="card-img-top" alt="..." id="centro">
+
+</div>
    
