--- a/Views/Home/trabalhe.cshtml
+++ b/Views/Home/trabalhe.cshtml
@@ -1,9 +1,9 @@
-    <form class="form border p-5 bg-light"> 
+    <form class="form border p-5 bg-light mt-5" id="formaTrabalho"> 
         
      <h1>Trabalhe conosco, envie seu curriculo</h1>
   <div class="mb-3">
     <label for="nome" class="form-label">Nome</label>
-    <input type="text" class="form-control" id="email">
+    <input type="text" class="form-control" id="nome">
   </div>
   <div class="mb-3">
     <label for="email" class="form-label">Email</label>
